# VrisingDLSS

./: .gitattributes  .gitignore  Directory.Build.props  LICENSE  NuGet.config  README.md
.github/workflows/: build-package.yml  build.yml
docs/: install.md  mvp.md  troubleshooting.md
docs/chatlog/: README.md
docs/context/: README.md  chatlog-2026-06-04-reconstruction.md  current-context.md
docs/development/: bounded-no-write-cost-matrix-contract-2026-06-08.md  build-notes.md  cached-driver-evaluate-runtime-result-2026-06-06.md  camera-dynamic-resolution-investigation-2026-06-06.md  computer-use-vrising-automation-notes-2026-06-06.md  custom-postprocess-registration-menu-result-2026-06-07.md  custom-postprocess-registration-preflight-implementation-2026-06-07.md  custom-postprocess-render-entry-menu-result-2026-06-07.md  custom-postprocess-render-entry-preflight-implementation-2026-06-07.md  dlss-mvp-safety-gates-2026-06-08.md  dlss-optimal-settings-runtime-protocol-2026-06-06.md  dlss-runtime-distribution-gate-2026-06-08.md  dlss-runtime-distribution-route-review-2026-06-08.md  doc-next-recommendation-contract-2026-06-08.md  experiment-evidence-lock-contract-2026-06-08.md  experiment-facts.json  fsr-off-render-scale-hwdrs-runtime-result-2026-06-06.md  fsr-off-render-scale-runtime-result-2026-06-06.md  fsr-off-render-scale-test-protocol-2026-06-05.md  gameplay-automation-exploration-2026-06-06.md  gameplay-automation-proof-protocol-2026-06-06.md  gameplay-continue-ui-navigation-protocol-2026-06-06.md  gameplay-direct-entry-route-search-2026-06-06.md  handler-request-runtime-test-2026-06-06.md  hdrp-dlss-contract-bind-render-scale-gameplay-result-2026-06-08.md  hdrp-dlss-contract-bind-render-scale-preflight-2026-06-08.md  hdrp-dlss-schedule-audit-preflight-2026-06-08.md  hdrp-dlss-schedule-audit-runtime-result-2026-06-08.md  hdrp-dlss-schedule-gate-preflight-2026-06-08.md  hdrp-easu-input-output-correlation-preflight-implementation-2026-06-07.md  hdrp-easu-input-output-correlation-render-scale-gameplay-result-2026-06-07.md  hdrp-postprocess-boundary-gameplay-result-2026-06-07.md  hdrp-postprocess-boundary-menu-result-2026-06-07.md  hdrp-postprocess-boundary-preflight-implementation-2026-06-07.md  hdrp-postprocess-render-args-gameplay-result-2026-06-07.md  hdrp-postprocess-render-args-global-textures-render-scale-gameplay-result-2026-06-07.md  hdrp-postprocess-render-args-preflight-implementation-2026-06-07.md  hdrp-postprocess-render-args-render-scale-gameplay-result-2026-06-07.md  local-build-validation-2026-06-04.md  local-preflight-2026-06-04.md  (+81 more)
docs/legal/: release-boundaries.md
docs/release/: dlss-fallback-validation.template.md  dlss-resize-reset-validation.template.md  dlss-runtime-distribution-approval.template.md
docs/research/: distribution-compliance-followup-2026-06-05.md  distribution-mvp-search-2026-06-05.md  dlss-mod-practices-2026-06-06.md  dlss-optimal-settings-route-2026-06-05.md  dlss-performance-investigation-2026-06-06.md  dlss-render-scale-route-2026-06-05.md  dlss-theoretical-performance-model-2026-06-06.md  hdrp-dlss-execution-boundary-2026-06-06.md  hdrp-dlss-official-boundary-equivalent-point-2026-06-07.md  (+14 more)
ref/: README.md
scripts/: analyze-bepinex-log.ps1  analyze-hdrp-dlss-schedule-audit.ps1  capture-system-snapshot.ps1  capture-vrising-fps.ps1  capture-vrising-window.ps1  check-release-boundary.ps1  compare-image-artifacts.ps1  find-vrising-save-fixture.ps1  get-contract-bind-gameplay-proof.ps1  get-native-renderfunc-entry-preflight.ps1  get-release-readiness-status.ps1  get-runtime-validation-status.ps1  get-visual-validation-status.ps1  inspect-vrising-hdrp-assets.ps1  inspect-vrising-hdrp-dlss-native-stubs.ps1  inspect-vrising-hdrp-dlss-static-route.ps1  inspect-vrising-install.ps1  inspect-vrising-visibility.ps1  inspect_vrising_hdrp_assets.py  install-bepinexpack.ps1  install-local-package.ps1  package-thunderstore.ps1  probe-ngx-runtime-exports.ps1  probe-vrising-render-metadata.ps1  protect-vrising-save.ps1  run-vrising-automation-proof.ps1  run-vrising-diagnostic.ps1  run-vrising-visual-comparison.ps1  set-vrising-fsr-mode.ps1  start-vrising-automation-session.ps1  stop-vrising-automation-session.ps1  test-bounded-no-write-cost-matrix-contract.ps1  test-chatlog-reconstruction-coverage.ps1  test-dlss-mvp-safety-gates-contract.ps1  test-dlss-mvp-safety-gates.ps1  test-dlss-runtime-distribution-gate-contract.ps1  test-dlss-runtime-distribution-gate.ps1  test-doc-next-recommendation-contract.ps1  test-experiment-evidence-lock-contract.ps1  test-hdrp-dlss-contract-bind-stage.ps1  (+10 more)
src/VrisingDLSS.Native/: CMakeLists.txt
src/VrisingDLSS.Native/include/: VrisingDlssNative.h
src/VrisingDLSS.Native/src/: VrisingDlssNative.cpp
(+28 files in other folders)
